srv/motioneye/Service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: motioneye
  name: motioneye
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8765
  selector:
    app: motioneye
